multi_index_map_derive2/tests/ui/duplicate.stderr
error: duplicate use of this accessor on the same field
 --> tests/ui/duplicate.rs:5:26
  |
5 |     #[multi_index(ByKey, ByKey)]
  |                          ^^^^^
